--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,18 +9,11 @@
 </head>
 <body>
     <%- include('header.ejs') %>
-
-    <table>
-        <% for( var i=0; i< allTodos.length; i++) {%>
-            <tr>
-                <td>
-                    <%= allTodos[i].title %>
-                </td>
-            </tr>
-        <% }
-        %>
-        
-    </table>
-    
+    <br>
+    <%- include("todos.ejs") %>
+    <br> 
 </body>
+<footer>
+    <%- include("footer.ejs") %>
+</footer>
 </html>
