--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./css/styles.css" rel="stylesheet" type="text/css" />
     <title>To-Do Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/css/styles.css" />
   </head>
+  <header></header>
   <body>
     <div class="grid grid-cols-6">
       <div class="col-start-3 col-span-2">
@@ -17,27 +19,36 @@
               <input
                 type="text"
                 placeholder="What's next?"
-                class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm"
+                class="rounded border border-gray-600 text-gray-900 p-2 text-sm w-full"
                 required
               />
             </div>
             <div class="flex-auto">
               <input
                 type="date"
-                class="border border-gray-300 rounded text-gray-900 w-full p-2 text-sm leading-4"
+                class="rounded border border-gray-600 text-gray-900 p-2 text-sm w-full leading-4"
               />
             </div>
-            <div class="flex-none">
+            <div class="flex-no">
               <button
                 type="submit"
-                class="bg-green-600 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2"
+                class="bg-green-600 text-white rounded px-5 py-1.5 font-medium mr-2 md-2"
               >
                 Add
               </button>
             </div>
           </div>
         </form>
-        <%- include('todos.ejs') %>
+        <div class="mt-2">
+          <h5 style="display:inline"><id>Overdue</h5>
+          <span style="text-align:right" id='count-overdue' class="bg-gray-200 text-black px-3 py-1 rounded font-medium mr-2 mb-2">1</span>
+          <%- include('todos.ejs') %>
+          <h5 style="display:inline">Due Today</h5>
+          <span style="text-align:right" id='count-due-today' class="bg-gray-200 text-black px-3 py-1 rounded font-medium mr-2 mb-2">2</span>
+          <%- include('todos.ejs') %>
+          <h5 style="display:inline">Due Later</h5>
+          <span style="text-align:right" id='count-due-later' class="bg-gray-200 text-black px-3 py-1 rounded font-medium mr-2 mb-2">3</span>
+        <%- include('todos.ejs') -%>
       </div>
     </div>
   </body>
