--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,8 @@
-body{
-    background-color: grey;
-    font-family: 'Courier New', Courier, monospace;
-}
+body {
+    font-family: sans-serif;
+    background: white;
+    }
+    
+    .Todo-Item:hover .trash-icon{
+      display:block;
+    }
